// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Textarea matches snapshot for error: wrapperErrorText mount 1`] = `
.emotion-1 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    margin-bottom: 0;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  border-left: 4px solid #b10e1e;
  margin-right: 15px;
  padding-left: 10px;
  margin-bottom: 0;
}

.emotion-7:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    margin-bottom: 0;
  }
}

.emotion-3 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 700;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #b10e1e;
  padding-top: 4px;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

.emotion-6 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
  border: 4px solid #b10e1e;
}

@media only screen and (min-width:641px) {
  .emotion-6 {
    font-size: 19px;
    line-height: 1.3;
    width: 75%;
  }
}

.emotion-6:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<Styled(TextArea)
  errorText="example"
  meta={
    Object {
      "error": "example",
      "touched": true,
    }
  }
>
  <TextArea
    className="emotion-1"
    errorText="example"
    input={Object {}}
    meta={
      Object {
        "error": "example",
        "touched": true,
      }
    }
  >
    <Styled(Label)
      error="example"
    >
      <Label
        className="emotion-1"
        error="example"
      >
        <Styled(label)
          className="emotion-1"
          error="example"
        >
          <label
            className="emotion-7"
          >
            <Styled(LabelText)>
              <LabelText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-0"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </Styled(LabelText)>
            <Styled(ErrorText)>
              <ErrorText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-3"
                  >
                    example
                  </span>
                </Styled(span)>
              </ErrorText>
            </Styled(ErrorText)>
            <Styled(textarea)
              error="example"
              rows="5"
              type="text"
            >
              <textarea
                className="emotion-6"
                rows="5"
                type="text"
              />
            </Styled(textarea)>
          </label>
        </Styled(label)>
      </Label>
    </Styled(Label)>
  </TextArea>
</Styled(TextArea)>
`;

exports[`Textarea matches snapshot for hint: wrapperHint mount 1`] = `
.emotion-1 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 0;
}

.emotion-7:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-7 {
    margin-bottom: 0;
  }
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    margin-bottom: 0;
  }
}

.emotion-6 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-6 {
    font-size: 19px;
    line-height: 1.3;
    width: 75%;
  }
}

.emotion-6:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

.emotion-3 {
  display: block;
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  color: #6f777b;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    margin-bottom: 0;
  }
}

<Styled(TextArea)
  hint="example"
>
  <TextArea
    className="emotion-1"
    hint="example"
    input={Object {}}
    meta={Object {}}
  >
    <Styled(Label)>
      <Label
        className="emotion-1"
      >
        <Styled(label)
          className="emotion-1"
        >
          <label
            className="emotion-7"
          >
            <Styled(LabelText)>
              <LabelText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-0"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </Styled(LabelText)>
            <Styled(HintText)>
              <HintText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-3"
                  >
                    example
                  </span>
                </Styled(span)>
              </HintText>
            </Styled(HintText)>
            <Styled(textarea)
              rows="5"
              type="text"
            >
              <textarea
                className="emotion-6"
                rows="5"
                type="text"
              />
            </Styled(textarea)>
          </label>
        </Styled(label)>
      </Label>
    </Styled(Label)>
  </TextArea>
</Styled(TextArea)>
`;

exports[`Textarea matches wrapper snapshot: wrapper mount 1`] = `
.emotion-1 {
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-1 {
    margin-bottom: 0;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  box-sizing: border-box;
  width: 100%;
  margin-bottom: 0;
}

.emotion-4:after {
  content: '';
  display: table;
  clear: both;
}

@media only screen and (min-width:641px) {
  .emotion-4 {
    margin-bottom: 0;
  }
}

.emotion-0 {
  font-family: "nta",Arial,sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  display: block;
  clear: none;
  font-weight: 400;
  font-size: 16px;
  line-height: 1.25;
  color: #0b0c0c;
  padding-bottom: 2px;
  margin-bottom: 0;
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    font-size: 19px;
    line-height: 1.3;
  }
}

@media only screen and (min-width:641px) {
  .emotion-0 {
    margin-bottom: 0;
  }
}

.emotion-3 {
  box-sizing: border-box;
  font-family: "nta",Arial,sans-serif;
  font-weight: 400;
  text-transform: none;
  font-size: 16px;
  line-height: 1.25;
  width: 100%;
  padding: 5px 4px 4px;
  border: 2px solid #0b0c0c;
}

@media only screen and (min-width:641px) {
  .emotion-3 {
    font-size: 19px;
    line-height: 1.3;
    width: 75%;
  }
}

.emotion-3:focus {
  outline: 3px solid #ffbf47;
  outline-offset: 0;
}

<Styled(TextArea)>
  <TextArea
    className="emotion-1"
    input={Object {}}
    meta={Object {}}
  >
    <Styled(Label)>
      <Label
        className="emotion-1"
      >
        <Styled(label)
          className="emotion-1"
        >
          <label
            className="emotion-4"
          >
            <Styled(LabelText)>
              <LabelText
                className="emotion-1"
              >
                <Styled(span)
                  className="emotion-1"
                >
                  <span
                    className="emotion-0"
                  >
                    example
                  </span>
                </Styled(span)>
              </LabelText>
            </Styled(LabelText)>
            <Styled(textarea)
              rows="5"
              type="text"
            >
              <textarea
                className="emotion-3"
                rows="5"
                type="text"
              />
            </Styled(textarea)>
          </label>
        </Styled(label)>
      </Label>
    </Styled(Label)>
  </TextArea>
</Styled(TextArea)>
`;
